--- a/infrastructure/aws-cf/parameters/svts.yaml
+++ b/infrastructure/aws-cf/parameters/svts.yaml
@@ -1,11 +1,11 @@
 - ParameterKey: "Environment"
   ParameterValue: svts
 - ParameterKey: "Team"
-  ParameterValue: __CICDNOOPS_PARAMETER_TEAM__
+  ParameterValue: inno
 - ParameterKey: "Project"
-  ParameterValue: __CICDNOOPS_PARAMETER_PROJECT__
+  ParameterValue: demoprt
 - ParameterKey: "Component"
-  ParameterValue: __CICDNOOPS_PARAMETER_COMPONENT__
+  ParameterValue: demoportal
 
 
 
